# iHosts

./: ERROR.md  README.md  TOOLS.md  back.txt  components.d.ts  latest.json  pack.sh  package.json  update.ts  updater.js  updater.json  vite.config.ts
.github/workflows/: build.yml  deploy.yml  mac.yml  minio.yml  updater.yml
src/: App.vue  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: host.rs  main.rs  sys.rs
src/common/: notice.ts  types.ts  utils.ts
src/components/: About.vue  Content.vue  DrawerHeader.vue  HostList.vue  HostListItem.vue  Logo.vue  Menu.vue  MenuItem.vue  MouseRight.vue  Problem.vue  Setting.vue  Updater.vue
src/constants/: common.ts
src/stores/: host.ts  sys.ts
src/styles/: main.less  overwrite.less  theme.less  var.less
