[package]
name = "iHost"
version = "1.0.0"
description = "好用的中文Host管理软件"
authors = ["康兵奎"]
license = ""
repository = ""
default-run = "iHost"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.1", features = ["api-all", "macos-private-api", "system-tray"] }
fs-err = "2.9.0"
rusqlite = { version = "0.28.0", features = ["bundled"] }
auto-launch = "0.4.0"
fix-path-env = { git="https://github.com/tauri-apps/fix-path-env-rs", branch = "dev" }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
